[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Eye_Top_V2.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Eye_Ball_V2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Head_V2.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Pawns/Pawn_17_Parts/Pawn_17_Head.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_17_Eye_Top_V2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_17_Eye_Ball_V2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -6, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_17_Eye_Ball_V2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_17_Eye_Top_V2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_17_Eye_Ball_V2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pawn_17_Eye_Ball_V2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="Pawn_17_Head" type="Node2D"]
script = ExtResource( 4 )

[node name="Pawn_17_Shield" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 3 )

[node name="Pawn_17_Head_V2" type="Sprite" parent="."]
texture = ExtResource( 3 )
offset = Vector2( 0, -0.5 )

[node name="Pawn_17_Eye_Top_V2" type="Sprite" parent="."]
self_modulate = Color( 0.223529, 0.223529, 0.223529, 1 )
position = Vector2( 6, -4 )
texture = ExtResource( 1 )

[node name="Pawn_17_Eye_Ball_V2" type="Sprite" parent="."]
position = Vector2( 6, -4 )
texture = ExtResource( 2 )
vframes = 2
hframes = 8
frame = 1

[node name="AnimationPlayer_Dir" type="AnimationPlayer" parent="."]
anims/Left = SubResource( 1 )
anims/Right = SubResource( 2 )

[node name="AnimationPlayer_Eye" type="AnimationPlayer" parent="."]
